--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+
+    <!-- SCRIPT DE ICONOS -->
+    <script src="https://kit.fontawesome.com/c54bf86035.js" crossorigin="anonymous"></script>
     <!-- FUENTES PAGINA WEB     -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -173,12 +176,58 @@
                     <!-- SECCION DE CONTACTO -->
                     <section class="contacto">
                         <h2 class="text-center">CONTACTO</h2>
+                        <div class="mb-3">
+                            <label for="exampleFormControlInput1" class="form-label">Email address</label>
+                            <input type="email" class="form-control" id="exampleFormControlInput1"
+                                placeholder="name@example.com">
+                        </div>
 
+                        <div class="mb-3">
+                            <label for="exampleFormControlInput1" class="form-label">Email address</label>
+                            <input type="email" class="form-control" id="exampleFormControlInput1"
+                                placeholder="name@example.com">
+                        </div>
+
+                        <div class="mb-3">
+                            <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                        </div>
+
+                        <button type="button" class="btn btn-primary">Primary</button>
                     </section>
                     <!-- FIN SECCION DE CONTACTO -->
                     <!-- FOOTER ICONOS -->
+                    <section class="iconos_card py-5 d-none d-md-block">
 
-                    <!-- FIN FOOTER ICONOS -->
+                        <div class="container ">
+                            <div class="row">
+                                <div class="col-5">
+                                    <h1>VIAJES CHILE</h1>
+                                </div>
+                                <div class="col-7">
+                                    <div class="row">
+                                        <div class="col-2">
+                                            <i class="fa-brands fa-github fa-3x"></i>
+
+                                        </div>
+                                        <div class="col-2">
+                                            <i class="fab fa-linkedin fa-3x"></i>
+                                        </div>
+                                        <div class="col-2">
+                                            <i class="fa-brands fa-twitter-square fa-3x"></i>
+                                        </div>
+                                        <div class="col-2">
+                                            <i class="fa-brands fa-facebook-square fa-3x"></i>
+                                        </div>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                </div>
+        </section>
+        <!-- FIN FOOTER ICONOS -->
     </main>
     <!-- FINCUADRO PRINCIPAL NEGRO -->
 
@@ -194,6 +243,8 @@
 
     <!-- SCRIPT DE PAGINA WEB     -->
     <script src="assets/js/script.js"></script>
+
+
 
     <!-- SCRIPT DE JQUERY     -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
