Cuarto commit de Prueba Viajes Chile

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col d-inline-block">
+                        <div> <i class="fa-solid fa-plane"></i></div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt nihil porro pariatur rem
                             blanditiis
                             dolores quae, ab vitae facilis ex esse architecto veniam sed! Velit laudantium beatae neque
