--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-
     <!-- SCRIPT DE ICONOS -->
     <script src="https://kit.fontawesome.com/c54bf86035.js" crossorigin="anonymous"></script>
     <!-- FUENTES PAGINA WEB     -->
@@ -34,15 +33,14 @@
         <!-- BARRA DE NAVEGACION -->
         <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-transparent">
             <!-- <div class="container px-4">
-                <img src="assets/img/viajes.svg" alt="viajes">
-                <h1 class="logo">Viajes Chile</h1> -->
+               <img src="assets/img/viajes.svg" alt="viajes">
+               <h1 class="logo">Viajes Chile</h1> -->
             <div class="container-fluid">
                 <a class="navbar-brand fixed-top" href="#">
                     <img id="logo_avion" src="assets/img/viajes.svg" alt="icono">
                     <!-- class="d-inline-block align-text-top" -->
                     Viajes Chile
                 </a>
-
                 <button class="navbar-toggler fixed-top ms-auto mb-2 mb-lg-0" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -90,43 +88,64 @@
     <main>
         <!-- SECCION QUIENES SOMOS -->
         <section class="somos">
-            <h2 class="text-center">¿Quiénes Somos?</h2>
-
-            <div class="container">
-                <div class="row">
-                    <div class="col d-inline-block">
-                        <div> <i class="fa-solid fa-plane"></i></div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt nihil porro pariatur rem
-                            blanditiis
-                            dolores quae, ab vitae facilis ex esse architecto veniam sed! Velit laudantium beatae neque
-                            placeat
-                            similique.</p>
-                    </div>
-                    <div class="col d-inline-block">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt nihil porro pariatur rem
-                            blanditiis
-                            dolores quae, ab vitae facilis ex esse architecto veniam sed! Velit laudantium beatae neque
-                            placeat
-                            similique.</p>
-                    </div>
-                    <div class="col d-inline-block">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt nihil porro pariatur rem
-                            blanditiis
-                            dolores quae, ab vitae facilis ex esse architecto veniam sed! Velit laudantium beatae neque
-                            placeat
-                            similique.</p>
+            <div class="py-5">
+                <h2 class="text-center py-5">¿QUIÉNES SOMOS?</h2>
+                <div class="container">
+                    <div class="row py-5">
+                        <div class="col d-inline-block">
+                            <div class="strip-icon text-center"> <i class="fa-solid fa-plane"></i></div>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt nihil porro pariatur
+                                rem
+                                blanditiis
+                                dolores quae, ab vitae facilis ex esse architecto veniam sed! Velit laudantium beatae
+                                neque
+                                placeat
+                                similique. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi impedit in
+                                cupiditate sint nulla! Maxime, quo aperiam, doloribus eveniet sit asperiores aut
+                                voluptatum
+                                vero impedit nihil eos sequi sunt reiciendis.
+                            </p>
+                        </div>
+                        <div class="col d-inline-block">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt nihil porro pariatur
+                                rem
+                                blanditiis
+                                dolores quae, ab vitae facilis ex esse architecto veniam sed! Velit laudantium beatae
+                                neque
+                                placeat
+                                similique. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione molestias
+                                sit
+                                unde consequatur eos eligendi, labore alias, ducimus nobis consequuntur perspiciatis
+                                sunt
+                                deleniti commodi dolorem officia, ad atque. Nobis, quasi!
+                            </p>
+                            <div class="strip-icon text-center"><i class=" fa-solid fa-mountain"></i>
+                            </div>
+                        </div>
+                        <div class="col d-inline-block">
+                            <div class="strip-icon text-center"><i class=" fa-solid fa-route"></i></div>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt nihil porro pariatur
+                                rem
+                                blanditiis
+                                dolores quae, ab vitae facilis ex esse architecto veniam sed! Velit laudantium beatae
+                                neque
+                                placeat
+                                similique. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione velit
+                                molestias
+                                maxime fuga veritatis, facere quae exercitationem? Aperiam voluptas voluptate laboriosam
+                                quod maxime, nesciunt, assumenda pariatur odit impedit, quidem nam.
+                            </p>
+                        </div>
                     </div>
                 </div>
-
             </div>
-
         </section>
         <!-- FIN SECCION QUIENES SOMOS -->
         <!-- CARDS DESTACADOS -->
         <section class="destacados">
-            <h2 class="text-center">Destacados</h2>
+            <h2 class="text-center pb-5">DESTACADOS</h2>
             <div class="container">
-                <div class="row">
+                <div class="row pt-4">
                     <div class="col">
                         <div class="card">
                             <img src="assets/img/card1.jpg" class="card-img-top" alt="card 1">
@@ -134,7 +153,8 @@
                                 <h5>Lorem ipsum dolor</h5>
                                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur
                                     alias reiciendis optio est quo nobis quia culpa error veritatis fugit vel explicabo
-                                    voluptatum eum quam, vitae, atque quisquam iure. Saepe.</p>
+                                    voluptatum eum quam, vitae, atque quisquam iure. Saepe.
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -145,7 +165,7 @@
                                 <h5>Consectetur adipisicing elit.</h5>
                                 <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestias
                                     distinctio minima recusandae quod perferendis quas pariatur hic unde quasi sequi
-                                    nostrum, aliquam consectetur magnam porro provident, ipsum aperiam odio adipisci!
+                                    nostrum.
                                 </p>
                             </div>
                         </div>
@@ -169,88 +189,70 @@
                                 <h5>Veniam aperiam molestiae omnis.</h5>
                                 <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi
                                     ipsam corrupti culpa. Vero ea nam enim dolorem. Ipsum inventore id, pariatur est
-                                    neque, explicabo qui voluptatum, veniam aperiam molestiae omnis.</p>
+                                    neque, explicabo qui voluptatum, veniam aperiam molestiae omnis.
+                                </p>
                             </div>
                         </div>
                     </div>
                     <!-- FIN CARDS DESTACADOS -->
                     <!-- SECCION DE CONTACTO -->
                     <section class="contacto">
-                        <h2 class="text-center">CONTACTO</h2>
+                        <h2 class="text-center py-5">CONTACTO</h2>
                         <div class="mb-3">
                             <label for="exampleFormControlInput1" class="form-label">Email address</label>
                             <input type="email" class="form-control" id="exampleFormControlInput1"
                                 placeholder="name@example.com">
                         </div>
-
                         <div class="mb-3">
                             <label for="exampleFormControlInput1" class="form-label">Email address</label>
                             <input type="email" class="form-control" id="exampleFormControlInput1"
                                 placeholder="name@example.com">
                         </div>
-
                         <div class="mb-3">
                             <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
                             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                         </div>
-
-                        <button type="button" class="btn btn-primary">Primary</button>
-                    </section>
-                    <!-- FIN SECCION DE CONTACTO -->
-                    <!-- FOOTER ICONOS -->
-                    <section class="iconos_card py-5 d-none d-md-block">
-
-                        <div class="container ">
-                            <div class="row">
-                                <div class="col-5">
-                                    <h1>VIAJES CHILE</h1>
-                                </div>
-                                <div class="col-7">
-                                    <div class="row">
-                                        <div class="col-2">
-                                            <i class="fa-brands fa-github fa-3x"></i>
-
-                                        </div>
-                                        <div class="col-2">
-                                            <i class="fab fa-linkedin fa-3x"></i>
-                                        </div>
-                                        <div class="col-2">
-                                            <i class="fa-brands fa-twitter-square fa-3x"></i>
-                                        </div>
-                                        <div class="col-2">
-                                            <i class="fa-brands fa-facebook-square fa-3x"></i>
-                                        </div>
-
-                                    </div>
-                                </div>
-                            </div>
+                        <div class="pb-5">
+                            <button type="button" class="btn btn-primary">Primary</button>
                         </div>
-
-                </div>
-        </section>
-        <!-- FIN FOOTER ICONOS -->
+                    </section>
     </main>
+    <!-- FIN SECCION DE CONTACTO -->
+    <!-- FOOTER ICONOS -->
+    <section class="iconos_card d-none d-md-block">
+        <div class="container ">
+            <div class="row">
+                <div class="col-5">
+                    <h2>VIAJES CHILE</h2>
+                </div>
+                <div class="col-7">
+                    <div class="row">
+                        <div class="col-2">
+                            <i class="fa-brands fa-github fa-3x"></i>
+                        </div>
+                        <div class="col-2">
+                            <i class="fab fa-linkedin fa-3x"></i>
+                        </div>
+                        <div class="col-2">
+                            <i class="fa-brands fa-twitter-square fa-3x"></i>
+                        </div>
+                        <div class="col-2">
+                            <i class="fa-brands fa-facebook-square fa-3x"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+    </section>
+    <!-- FIN FOOTER ICONOS -->
+
     <!-- FINCUADRO PRINCIPAL NEGRO -->
-
-
-
-
-
-
-
-
-
-
-
     <!-- SCRIPT DE PAGINA WEB     -->
     <script src="assets/js/script.js"></script>
-
-
-
     <!-- SCRIPT DE JQUERY     -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-
     <!-- SCRIPT DE BOOTSTRAP -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
