Octava version arreglo en color main y enlaces del footer

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                     <div class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <a class="nav-link" href="#">Inicio</a>
                         <a class="nav-link" href="#QSomos">Quienes Somos</a>
-                        <a class="nav-link" href="#destaca">Destacados</a>
-                        <a class="nav-link" href="#contact">Contacto</a>
+                        <a class="nav-link" href="#Destaca">Destacados</a>
+                        <a class="nav-link" href="#Contact">Contacto</a>
                     </div>
                 </div>
             </div>
@@ -143,7 +143,7 @@
         <!-- FIN SECCION QUIENES SOMOS -->
         <!-- CARDS DESTACADOS -->
         <section class="destacados">
-            <h2 class="text-center pb-5" id="destaca">DESTACADOS</h2>
+            <h2 class="text-center pb-5" id="Destaca">DESTACADOS</h2>
             <div class="container">
                 <div class="row pt-4">
                     <div class="col">
@@ -197,7 +197,7 @@
                     <!-- FIN CARDS DESTACADOS -->
                     <!-- SECCION DE CONTACTO -->
                     <section class="contacto">
-                        <h2 class="text-center py-5" id="contact">CONTACTO</h2>
+                        <h2 class="text-center py-5" id="Contact">CONTACTO</h2>
                         <div class="mb-3">
                             <label for="exampleFormControlInput1" class="form-label">Nombre</label>
                             <input type="email" class="form-control" id="exampleFormControlInput1">
@@ -214,16 +214,19 @@
                             <button type="button" class="btn btn-light">Enviar</button>
                         </div>
                     </section>
+                    <!-- FIN SECCION DE CONTACTO -->
     </main>
-    <!-- FIN SECCION DE CONTACTO -->
+
+    <!-- FINCUADRO PRINCIPAL NEGRO -->
+
     <!-- FOOTER ICONOS -->
-    <section class="iconos_card d-none d-md-block">
-        <div class="container ">
+    <footer class="iconos_card d-none d-md-block">
+        <div class="container py-4">
             <div class="row">
-                <div class="col-5">
+                <div class="col-4">
                     <h2>VIAJES CHILE</h2>
                 </div>
-                <div class="col-7">
+                <div class="col-8 px-5 d-flex justify-content-end">
                     <div class="row">
                         <div class="col-2">
                             <a href="https://github.com/" target="_blank"><i class="fa-brands fa-github fa-3x"></i></a>
@@ -245,12 +248,11 @@
             </div>
         </div>
         </div>
-    </section>
+    </footer>
     <!-- FIN FOOTER ICONOS -->
 
-    <!-- FINCUADRO PRINCIPAL NEGRO -->
-    <!-- SCRIPT DE PAGINA WEB     -->
-    <script src="assets/js/script.js"></script>
+
+
     <!-- SCRIPT DE JQUERY     -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
@@ -261,6 +263,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
+    <!-- SCRIPT DE PAGINA WEB     -->
+    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
