Novena entrega deben aparecer los vinculos del footer

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                <img src="assets/img/viajes.svg" alt="viajes">
                <h1 class="logo">Viajes Chile</h1> -->
             <div class="container-fluid">
-                <a class="navbar-brand fixed-top" href="#">
+                <a class="navbar-brand fixed-top ps-5 pt-3" href="#">
                     <img id="logo_avion" src="assets/img/viajes.svg" alt="icono">
                     <!-- class="d-inline-block align-text-top" -->
                     Viajes Chile
@@ -46,7 +46,7 @@
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="listas_inicio collapse navbar-collapse fixed-top" id="navbarNavAltMarkup">
+                <div class="listas_inicio collapse navbar-collapse fixed-top pe-5 pt-3" id="navbarNavAltMarkup">
                     <div class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <a class="nav-link" href="#">Inicio</a>
                         <a class="nav-link" href="#QSomos">Quienes Somos</a>
@@ -89,7 +89,7 @@
         <!-- SECCION QUIENES SOMOS -->
         <section class="somos">
             <div class="py-5">
-                <h2 class="text-center py-5" id="QSomos">¿QUIÉNES SOMOS?</h2>
+                <h2 class="text-center py-5 border-bottom" id="QSomos">¿QUIÉNES SOMOS?</h2>
                 <div class="container">
                     <div class="row py-5">
                         <div class="col d-inline-block">
@@ -143,7 +143,7 @@
         <!-- FIN SECCION QUIENES SOMOS -->
         <!-- CARDS DESTACADOS -->
         <section class="destacados">
-            <h2 class="text-center pb-5" id="Destaca">DESTACADOS</h2>
+            <h2 class="text-center pb-5 border-bottom" id="Destaca">DESTACADOS</h2>
             <div class="container">
                 <div class="row pt-4">
                     <div class="col">
@@ -197,7 +197,7 @@
                     <!-- FIN CARDS DESTACADOS -->
                     <!-- SECCION DE CONTACTO -->
                     <section class="contacto">
-                        <h2 class="text-center py-5" id="Contact">CONTACTO</h2>
+                        <h2 class="text-center py-5 border-bottom" id="Contact">CONTACTO</h2>
                         <div class="mb-3">
                             <label for="exampleFormControlInput1" class="form-label">Nombre</label>
                             <input type="email" class="form-control" id="exampleFormControlInput1">
