Decima version se arreglaron las cards

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <div class="container">
                 <div class="row pt-4">
                     <div class="col">
-                        <div class="card">
+                        <div class="card h-100">
                             <img src="assets/img/card1.jpg" class="card-img-top" alt="card 1">
                             <div class="card-body">
                                 <h5>Lorem ipsum dolor</h5>
@@ -159,7 +159,7 @@
                         </div>
                     </div>
                     <div class="col">
-                        <div class="card">
+                        <div class="card h-100">
                             <img src="assets/img/card2.jpg" class="card-img-top" alt="card 2">
                             <div class="card-body">
                                 <h5>Consectetur adipisicing elit.</h5>
@@ -171,7 +171,7 @@
                         </div>
                     </div>
                     <div class="col">
-                        <div class="card">
+                        <div class="card h-100">
                             <img src="assets/img/card3.jpg" class="card-img-top" alt="card 3">
                             <div class="card-body">
                                 <h5>Harum minima quaerat voluptate suscipit.</h5>
@@ -183,7 +183,7 @@
                         </div>
                     </div>
                     <div class="col">
-                        <div class="card">
+                        <div class="card h-100">
                             <img src="assets/img/card4.jpg" class="card-img-top" alt="card 4">
                             <div class="card-body">
                                 <h5>Veniam aperiam molestiae omnis.</h5>
