--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <!-- class="d-inline-block align-text-top" -->
                     Viajes Chile
                 </a>
-                <button class="navbar-toggler fixed-top ms-auto mb-2 mb-lg-0" type="button" data-bs-toggle="collapse"
+                <button class="navbar-toggler fixed-top justify-content-end" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
