--- a/index.html
+++ b/index.html
@@ -201,23 +201,25 @@
         <!-- SECCION DE CONTACTO -->
         <section class="contacto">
             <h2 class="text-center py-5 border-bottom" id="Contact">CONTACTO</h2>
-            <div class="mb-3">
-                <label for="exampleFormControlInput1" class="form-label">Nombre</label>
-                <input type="email" class="form-control" id="exampleFormControlInput1">
-            </div>
-            <div class="mb-3">
-                <label for="exampleFormControlInput1" class="form-label">Asunto</label>
-                <input type="email" class="form-control" id="exampleFormControlInput1">
-            </div>
-            <div class="mb-3">
-                <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-            </div>
-            <div class="pb-5">
-                <button type="button" class="btn btn-light">Enviar</button>
+            <div class="px-5">
+                <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Nombre</label>
+                    <input type="email" class="form-control" id="exampleFormControlInput1">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Asunto</label>
+                    <input type="email" class="form-control" id="exampleFormControlInput1">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                </div>
+                <div class="pb-5">
+                    <button type="button" class="btn btn-light">Enviar</button>
+                </div>
             </div>
         </section>
-        </div>
+
 
         <!-- FIN SECCION DE CONTACTO -->
     </main>
