Ultimo arreglo de navbar

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- CABECERA -->
     <header>
         <!-- BARRA DE NAVEGACION -->
-        <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-transparent">
+        <nav class="navbar fixed-top navbar-expand-md navbar-dark bg-transparent">
             <!-- <div class="container px-4">
                <img src="assets/img/viajes.svg" alt="viajes">
                <h1 class="logo">Viajes Chile</h1> -->
@@ -44,10 +44,10 @@
                 <button class="navbar-toggler fixed-top " style="float:right" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                     aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon position-relative top-0 start-0"></span>
+                    <span class="navbar-toggler-icon float-end top-0 start-0"></span>
                 </button>
-                <div class="listas_inicio collapse navbar-collapse fixed-top pe-5 pt-3" id="navbarNavAltMarkup">
-                    <div class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <div class="listas_inicio collapse navbar-collapse  pe-5 pt-3" id="navbarNavAltMarkup">
+                    <div class="navbar-nav ms-auto mb-2 mb-lg-0 ">
                         <a class="nav-link" href="#">Inicio</a>
                         <a class="nav-link" href="#QSomos">Quienes Somos</a>
                         <a class="nav-link" href="#Destaca">Destacados</a>
